# cbox

./: .gitignore  COPYRIGHT  Makefile.am  README  README.mkd  TODO  cbox.8  cbox.in  cbox.spec  cbox.spec.in  configure.ac
data/: Makefile.am  centos-7.1.ks  fedora-13.ks  fedora-14.ks  fedora-15.ks  fedora-16.ks  fedora-17.ks  fedora-18.ks  fedora-21.ks  fedora-22.ks  fedora-rawhide.ks  libvirt_template.xml  packages_ceph.ks  packages_cman.ks  packages_corosync.ks
hooks/: 01_host_update  02_host_install_packages  03_host_net_setup  03_host_virt_net_setup  04_guest_create  04_host_fence_setup  05_host_create_ssh_keys  06_host_create_guest_kickstart  07_host_ntp_setup  50_guest_create  51_guest_mount  52_guest_net_setup  53_guest_fstab_setup  54_guest_install_ssh_keys  55_guest_create_cluster_conf  55_guest_create_corosync_conf  55_guest_umount  56_fix_ntp_conf  58_guest_apply_hacks  58_guest_apply_hacks_prerun  59_guest_umount  60_guest_create_first_node  60_guest_create_shared_disk  61_guest_create_driver_node  61_guest_start_first  62_guest_setup_clvmd  63_guest_setup_gfs2  64_guest_enable_cluster_daemons  64_guest_setup_qdiskd  67_guest_enable_cluster_daemons  67_guest_enable_daemons  68_guest_apply_hacks_live  69_guest_stop_first  70_clone_nodes  70_guest_clone_nodes  71_guest_apply_hacks_prerun  71_guest_autostart_nodes  72_guest_start_nodes  73_guest_driver_node_postrun  74-quest_apply_hacks_running  (+2 more)
kitchensink/: README  cman_notify  cnode_libvirt_template.in  create_image  fedora-rawhide.ks  fedora13.ks  fedora14.ks  host_set  host_unset  knet_node_libvirt_template.in  mount_guest
make/: release.mk
